# cronosai

.cursor/rules/: create-agent.mdc
playground/: .gitignore  __init__.py  example.env  main.py  pgvector.docker-compose.yaml  pyproject.toml
playground/agents/: babeTester.py  cronos.py  dev.py  edcTester.py  tester.py
playground/custom/knowledge/: mdKnowledge.py  mdReader.py  pdfKnowledge.py  pdfReader.py
playground/embedder/: google.py
playground/knowledgebase/: __init__.py  babeTesterKnowledge.py  cronosKnowledge.py  edcTesterKnowledge.py
playground/models/: gemini.py
playground/scripts/: run-pgvector.sh
playground/vectordb/: pgvector.py
ui/src/: store.ts
ui/src/components/playground/ChatArea/: MessageArea.tsx
ui/src/components/playground/Sidebar/: Sidebar.tsx
ui/src/components/playground/Sidebar/Sessions/: SessionItem.tsx  Sessions.tsx
ui/src/hooks/: useSessionLoader.tsx
