[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.4.1",
    "aiofiles>=24.1.0",
    "fastapi>=0.115.12",
    "google-genai>=1.12.1",
    "pgvector>=0.4.0",
    "psycopg[binary,pool]>=3.2.6",
    "pymupdf>=1.25.5",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.2",
]

[tool.setuptools]
packages = [
    "knowledgebase",
    "custom",
    "vectordb",
    "agents",
    "models",
    "embedder"
]
